# bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app/: __init__.py  main.py  settings.py
src/app/api/: image_v3.py  internal.py  router.py
src/app/common/: http_async_builder.py  logger_common.py  logger_config.py  middlewares.py
src/app/exceptions/: RedisPollError.py
src/app/models/: dto.py  dto_v3.py  shooter_dto.py
src/app/resources/data/: c-check-provenance.video-group.json  social_media_accounts_domain_list.json
src/app/services/: __init__.py  aws_service.py  cloud_custom_search_helper.py  cloud_lens_helper.py  cloud_service.py  cloud_vision_help.py  facade_controller.py  facade_service.py  mongo_service.py  ranker_controller.py  shooter_controller.py
src/app/utils/: __init__.py  lrucache.py  verify_facebook.py  verify_instagram.py  verify_tiktok.py  verify_twitter.py  verify_youtube.py
src/envs/: ci.env  dev.env  local.env  prod.env
src/tests/: __init__.py
src/tests/integration/: endpoints_v3_test.py  test_cloud_lens_helper.py  test_cloud_vision_helper.py  test_image_service_v3.py  test_verify_tiktok.py  test_verify_youtube.py
src/tests/test-driven-development/: tdd_endpoints_v3.py
src/tests/unit/: test_extractor_utils.py  test_image_service.py  test_lens_domain_filter.py  test_verify_instagram.py  test_verify_twitter.py  test_verify_youtube_ut.py
src/tests/unit/api/: image_router_negative_validation_tests.py  (+2 more)
src/tests/utils/: lens_service_selenium_helper.py  res_utils.py
(+6 files in other folders)
